--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,6 +9,8 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+		<link rel="stylesheet" href="/styles/index.css">
+
         {{ block "head" . }}
         {{ end }}
     </head>
