--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,35 +1,85 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>we</title>
-        <meta name="description" content="The We Movement">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-		<link rel="stylesheet" href="/styles/index.css">
+	<base href="{{ .Site.BaseURL }}">
 
-        {{ block "head" . }}
-        {{ end }}
-    </head>
-    <body>
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+	{{ if eq .URL "/" }}
+		<title>{{ .Title }}</title>
+	{{ else }}
+		<title>{{ .Title }} - {{ .Site.Title }}</title>
+	{{ end }}
 
-        {{ block "main" . }}
-        {{ end }}
+	{{ if eq .URL "/" }}
+		<meta property="description" content="{{ .Site.Params.description }}">
+	{{ else if .Description }}
+		<meta property="description" content="{{ .Description }}">
+	{{ end }}
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+	{{ block "fonts" . }}
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
+		<script>
+			(function(d) {
+				var config = {
+						kitId: 'lia0icw',
+						scriptTimeout: 3000,
+						async: true
+					},
+					h = d.documentElement,
+					t = setTimeout(function() {
+						h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+					}, config.scriptTimeout),
+					tk = d.createElement("script"),
+					f = false,
+					s = d.getElementsByTagName("script")[0],
+					a;
+				h.className += " wf-loading";
+				tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+				tk.async = true;
+				tk.onload = tk.onreadystatechange = function() {
+					a = this.readyState;
+					if (f || a && a != "complete" && a != "loaded") return;
+					f = true;
+					clearTimeout(t);
+					try {
+						Typekit.load(config)
+					} catch (e) {}
+				};
+				s.parentNode.insertBefore(tk, s)
+			})(document);
+		</script>
+	{{ end }}
 
-        {{ block "scripts" . }}
-        {{ end }}
-    </body>
+	{{ block "styles" . }}
+		<link rel="stylesheet" href="/styles/base.css">
+	{{ end }}
+
+	{{ block "extras" . }}{{ end }}
+</head>
+
+{{ block "body" . }}
+	<body>
+		<!--[if lte IE 9]>
+	            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to make full use of this website.</p>
+	        <![endif]-->
+
+		{{ partial "header.html" . }}
+
+		<main>
+			{{ block "main" . }}{{ end }}
+		</main>
+
+		{{ partial "footer.html" . }}
+		{{ partial "vendor/ga.html" . }}
+
+		{{ block "scripts" . }}{{ end }}
+
+	</body>
+{{ end }}
+
 </html>
