--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,40 +23,10 @@
 
 	{{ block "fonts" . }}
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
-		<script>
-			(function(d) {
-				var config = {
-						kitId: 'lia0icw',
-						scriptTimeout: 3000,
-						async: true
-					},
-					h = d.documentElement,
-					t = setTimeout(function() {
-						h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
-					}, config.scriptTimeout),
-					tk = d.createElement("script"),
-					f = false,
-					s = d.getElementsByTagName("script")[0],
-					a;
-				h.className += " wf-loading";
-				tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
-				tk.async = true;
-				tk.onload = tk.onreadystatechange = function() {
-					a = this.readyState;
-					if (f || a && a != "complete" && a != "loaded") return;
-					f = true;
-					clearTimeout(t);
-					try {
-						Typekit.load(config)
-					} catch (e) {}
-				};
-				s.parentNode.insertBefore(tk, s)
-			})(document);
-		</script>
 	{{ end }}
 
 	{{ block "styles" . }}
-		<link rel="stylesheet" href="/styles/base.css">
+		<link rel="stylesheet" href="/styles/index.css">
 	{{ end }}
 
 	{{ block "extras" . }}{{ end }}
@@ -70,12 +40,9 @@
 
 		{{ partial "header.html" . }}
 
-		<main>
-			{{ block "main" . }}{{ end }}
-		</main>
+		{{ block "main" . }}{{ end }}
 
 		{{ partial "footer.html" . }}
-		{{ partial "vendor/ga.html" . }}
 
 		{{ block "scripts" . }}{{ end }}
 
