--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,7 @@
-<footer class="container">
-	<div>goodbye</div>
-</footer>
+<header>
+	<div class="container-fluid">
+		<nav>
+			<a class="navbar-brand" href="/">We</a>
+		</nav>
+	</div>
+</header>
