--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,11 +25,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
 	{{ end }}
 
-	{{ block "styles" . }}
+	{{ block "base" . }}
 		<link rel="stylesheet" href="/styles/index.css">
 	{{ end }}
 
+	{{ block "styles" . }}{{ end }}
+
 	{{ block "extras" . }}{{ end }}
+
 </head>
 
 {{ block "body" . }}
