--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,5 @@
-<header class="container">
-	<div>hello</div>
-</header>
+<footer>
+	<div class="container-fluid">
+		<p class="m-0">goodbye</p>
+	</div>
+</footer>
