--- a/layouts/partials/issues/section.html
+++ b/layouts/partials/issues/section.html
@@ -1,28 +1,33 @@
-<section id="{{ lower .type }}">
-	<h3>{{ .type }}</h3>
-	<ul>
+<section class="content" id="{{ lower .type }}">
+	<h4 class="title">{{ .type }}</h4>
+	<ul class="item-list list-unstyled">
 		{{ range .content }}
 
-			{{ if eq .full nil }}
+			<li class="item">
 
-				<li id={{ md5 .summary }} class="content-item">
-					<p>{{ .summary }}</p>
-				</li>
+				{{ if eq .full nil }}
 
-			{{ else }}
-
-				<li id={{ md5 .summary }} class="content-item collapsible">
-					<p>
-						<a href="#{{ md5 .summary }}" data-toggle="collapse" class="collapsible-toggle">
-							{{ .summary }}
-						</a>
-					</p>
-					<div class="collapsible-content">
-						<p>{{ .full }}</p>
+					<div class="item-summary">
+						{{ partial "utils/markdownify.html" .summary }}
 					</div>
-				</li>
 
-			{{ end }}
+				{{ else }}
+
+					<a data-target="#{{ md5 .summary }}" data-toggle="collapse">
+						<div class="item-summary collapsible">
+							{{ partial "utils/markdownify.html" .summary }}
+						</div>
+					</a>
+
+					<div id="{{ md5 .summary }}" class="collapse">
+						<div class="item-full">
+							{{ partial "utils/markdownify.html" .full }}
+						</div>
+					</div>
+
+				{{ end }}
+
+			</li>
 
 		{{ end }}
 	</ul>
