--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -53,6 +53,63 @@ $spacers: (
 
 $main-spacer: get-spacers(6, 'x');
 
+$border-width: 1px;
+
+$sizes: (
+  25: 25%,
+  50: 50%,
+  75: 75%,
+  100: 100%
+);
+
+// Body
+
+$body-bg:       $white;
+$body-color:    $gray-dark;
+$inverse-bg:    $gray-dark;
+$inverse-color: $gray-lighter;
+
+// Links
+
+$link-color:            $brand-primary;
+$link-decoration:       none;
+$link-hover-color:      darken($link-color, 15%);
+$link-hover-decoration: underline;
+
+// Grid breakpoints
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
+@include _assert-starts-at-zero($grid-breakpoints);
+
+// Grid containers
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
+@include _assert-ascending($container-max-widths, "$container-max-widths");
+
+// Grid columns
+
+$grid-columns:               12;
+$grid-gutter-width-base:     32px;
+$grid-gutter-widths: (
+  xs: $grid-gutter-width-base,
+  sm: $grid-gutter-width-base,
+  md: $grid-gutter-width-base,
+  lg: $grid-gutter-width-base,
+  xl: $grid-gutter-width-base
+);
+
 // Fonts
 
 $font-family-sans-serif: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -62,15 +119,15 @@ $font-family-base:       $font-family-sans-serif;
 
 $font-size-base: 1rem; // http://www.modularscale.com/?16&px&1.25&web&text
 $font-size-lg:   1.25rem;
-$font-size-sm:   .875rem;
-$font-size-xs:   .75rem;
+$font-size-sm:   .8rem;
+$font-size-xs:   .64rem;
 
 $font-weight-light: 200;
 $font-weight-normal: 400;
 $font-weight-bold: 600;
 
 $font-weight-base: $font-weight-normal;
-$line-height-base: 1.5;
+$line-height-base: 1.6;
 
 $font-size-h1: 2.441rem;
 $font-size-h2: 1.953rem;
@@ -81,8 +138,8 @@ $font-size-h6: 1rem;
 
 $headings-margin-bottom: ($spacer / 2);
 $headings-font-family:   inherit;
-$headings-font-weight:   500;
-$headings-line-height:   1.1;
+$headings-font-weight:   400;
+$headings-line-height:   1.2;
 $headings-color:         inherit;
 
 $display1-size: 6rem;
@@ -124,8 +181,8 @@ $list-inline-padding: 5px;
 
 // Components
 
-$line-height-lg:         (4 / 3);
-$line-height-sm:         1.5;
+$line-height-lg:         2;
+$line-height-sm:         1.2;
 
 $border-radius:          .25rem;
 $border-radius-lg:       .3rem;
