--- a/layouts/partials/issues/expander.html
+++ b/layouts/partials/issues/expander.html
@@ -1,9 +1,9 @@
-<section class="content" id="{{ lower .type }}">
+<section class="expander last-child-mb-0" id="{{ lower .type }}">
 	<h4 class="title">{{ .type }}</h4>
-	<ul class="item-list list-unstyled">
+	<ul class="item-list list-unstyled last-child-mb-0">
 		{{ range .content }}
 
-			<li class="item">
+			<li class="item item-{{ .type }}">
 
 				{{ if eq .full nil }}
 
