--- a/assets/styles/issues.scss
+++ b/assets/styles/issues.scss
@@ -5,23 +5,14 @@ $item-spacer-x: get-spacers(2, 'x');
 $item-spacer-y: get-spacers(2, 'x');
 $item-spacer: get-spacers(3, 'x');
 
-.title {
-
-	margin-bottom: get-spacers(5, 'x');
-
-	> * {
-		margin-bottom: $item-spacer-y;
-		&:last-child {
-			margin-bottom: 0;
-		}
-	}
+section.title {
 
 	h1 {
 
 	}
 
 	.lastmod {
-		font-size: $font-size-sm;
+
 	}
 
 	.tag {
@@ -45,10 +36,18 @@ article {
 
 	section {
 
-		// margin-bottom: get-spacers(5, 'x');
-
 		.title {
-			margin-bottom: $item-spacer;
+			// padding-left: 18px;
+			// position: relative;
+			// &:before {
+			// 	content: "";
+			//     position: absolute;
+			//     left: 0;
+			//     top: 0.4rem;
+			//     bottom: 0.4rem;
+			//     width: 6px;
+			//     background: #CCC;
+			// }
 		}
 
 	}
@@ -58,59 +57,50 @@ article {
 .expander {
 
 	.item-list {
-		margin-bottom: $item-spacer;
 	}
 
 	.item {
-		margin-bottom: $item-spacer;
 	}
 
 	.item-summary,
 	.item-full {
-		& > *:last-child {
-			margin-bottom: 0;
-		}
 	}
 
 	.item-summary {
+		position: relative;
 		&.collapsible {
 			cursor: pointer;
 		}
 	}
 
 	.item-full {
-		margin-top: $item-spacer;
-		margin-left: $item-spacer;
+
 	}
 
-}
-
-.activity {
-
-	.item-list {
-		margin-bottom: $item-spacer;
+	.item-diamond,
+	.item-chevron {
+		position: absolute;
+	    border-style: solid;
+	    height: 0.40em;
+	    width: 0.40rem;
 	}
 
-	.item {
-		margin-bottom: $item-spacer;
+	.item-diamond {
+		border-width: 1px;
+		border-radius: 50%;
+		background: #000;
 	}
 
-	.item-summary,
-	.item-full {
-		& > *:last-child {
-			margin-bottom: 0;
-		}
+	.item-chevron {
+		transition: transform 0.6s ease-in-out;
+		height: 0.50em;
+	    width: 0.50rem;
+		transform: rotate(-45deg);
+		border-width: 0 3px 3px 0px;
 	}
 
-	.item-summary {
-		&.collapsible {
-			cursor: pointer;
-		}
-	}
-
-	.item-full {
-		margin-top: $item-spacer;
-		margin-left: $item-spacer;
+	.item-chevron.chevron-open {
+		transform: rotate(45deg);
 	}
 
 }
