--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,7 @@
 	{{ end }}
 
 	{{ block "base" . }}
-		<link rel="stylesheet" href="/styles/index.css">
+		<link rel="stylesheet" href="/styles/app.css">
 	{{ end }}
 
 	{{ block "styles" . }}{{ end }}
