--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
-	<div class="container-fluid">
+	<div class="container">
 		<nav>
-			<a class="navbar-brand" href="/">We</a>
+			<a class="navbar-brand" href="/">we</a>
 		</nav>
 	</div>
 </header>
