--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 <footer>
-	<div class="container-fluid">
-		<p class="m-0">goodbye</p>
+	<div class="container meta-font-style text-center">
+		<p class="d-sm-inline-block m-0">Made with <3</p>
+		<p class="d-sm-inline-block m-0 ml-3"><a href="https://github.com/alizain/we">Source</a></p>
 	</div>
 </footer>
